# rust-benchmark_aos_vs_soa

./: Cargo.toml
benches/: search.rs
criterion/reports/: index.html
criterion/reports/search/: index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/: index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/aos/: history.html  index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/aos_10/: history.html  index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/aos_11/: history.html  index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/aos_12/: history.html  index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/aos_13/: history.html  index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/aos_14/: history.html  index.html
criterion/reports/search (alloc__string__String, u32, u64, u64, bool)/aos_15/: history.html  index.html
criterion/reports/search (u128, u32, u64, u64, bool)/: index.html
criterion/reports/search (u32, alloc__string__String, u64, u64, bool)/: index.html
criterion/reports/search (u32, u128, u64, u64, bool)/: index.html
criterion/reports/search (u64, u32, alloc__string__String, u64, bool)/: index.html
criterion/reports/search (u64, u32, u128, u64, bool)/: index.html
criterion/reports/search (u64, u64, u32, alloc__string__String, bool)/: index.html
criterion/reports/search (u64, u64, u32, u128, bool)/: index.html
src/: lib.rs
(+5786 files in other folders)
