[package]
name = "soa_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "soa_bench"

[dependencies]
# soa-vec = "0.5.0"

[dev-dependencies]
criterion = "0.4.0"


[[bench]]
name = "search"
harness = false
